[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui/TitleScreen.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "colorwheel"
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.627451, 0.0823529, 0.0823529, 1 ), Color( 0.909804, 0.913725, 0.168627, 1 ), Color( 0.0352941, 0.47451, 0, 1 ), Color( 0.215686, 0.658824, 0.6, 1 ), Color( 0.14902, 0.164706, 0.541176, 1 ), Color( 0.819608, 0.235294, 0.835294, 1 ), Color( 0.627451, 0.0823529, 0.0823529, 1 ) ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = SubResource( 8 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=16]
size = 50
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=17]
resource_local_to_scene = true
font_path = "res://assets/cleanwork.ttf"

[sub_resource type="DynamicFont" id=18]
size = 20
font_data = SubResource( 17 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.776509, 0, 0.392832, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/colorwheel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -313.0
margin_top = 150.0
margin_right = 313.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "Evolution"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -361.0
margin_right = 184.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 368.0
margin_bottom = 57.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.482353, 0.482353, 0.482353, 1 )
text = "Start"

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 368.0
margin_bottom = 118.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/hover_pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 0.415686 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.435294 )
text = "Fullscreen"

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 368.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 0.443137 )
text = "Music"
align = 1
valign = 1

[node name="Music" type="HSlider" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 368.0
margin_bottom = 166.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="SFXLabel" type="Label" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 368.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 0.443137 )
text = "SFX"
align = 1
valign = 1

[node name="SFX" type="HSlider" parent="VBoxContainer"]
margin_top = 198.0
margin_right = 368.0
margin_bottom = 214.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 368.0
margin_bottom = 275.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.482353, 0.482353, 0.482353, 1 )
text = "Quit"

[node name="ConfirmQuit" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -35.0
margin_right = 137.0
margin_bottom = 35.0
popup_exclusive = true
window_title = ""
dialog_text = "Are you sure you want to quit the game?"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="ConfirmQuit" to="." method="_on_ConfirmQuit_confirmed"]
